--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -30,6 +30,7 @@ body {
   }
 }
 
+
 .banner {
   background-color: #f7f8fa;
   text-align: center;
@@ -84,6 +85,7 @@ body {
 
 // SECTION-4
 .case-studies {
+  margin-top: 100px;
   .color-cards {
     .card-contents {
       position: relative;
