--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -63,7 +63,8 @@ body {
     font-weight: 500;
     transition: color 0.5s ease-in-out;
     &:hover {
-      color: #ff0000;
+      //color: #ff0000;
+      color: #E27444;
     }
   }
   .features-width {
@@ -150,6 +151,10 @@ body {
       border-radius: 50%;
       transition: all 0.7s ease-in-out; 
     }
+    .img-logo {
+      border-radius: 10%;
+      transition: all 0.7s ease-in-out; 
+    }
     &:hover {
       background: #e4e7ea;
       transform: scale(1.02);
@@ -196,14 +201,16 @@ body {
     color: $text-muted;
     transition: all 0.6s ease-in-out;
     &:hover {
-      color: #ff0000;
+      //color: #ff0000;
+      color: #E27444;
     } 
   }
 }
 
 footer {
   a {
-    color: #ff0000;
+    //color: #ff0000;
+    color: #E27444;
     &:hover {
       color: black;
     }
@@ -288,7 +295,8 @@ footer {
   }
   &:nth-child(even) {
     .content-divider {
-      background-color: red;
+      //background-color: red;
+      background-color: #E27444;
     }
   }
 }
