--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -25,11 +25,13 @@
         font-weight: 500;
         color: #111111;
         &:hover {
-          color: #ff0000;
+          //color: #ff0000;
+          color: #E27444;
           transition: all 0.3s ease;
         }
         &.active {
-          color: #ff0000; 
+          //color: #ff0000;
+          color: #E27444; 
         }
       }
     }
