--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,13 @@
 $theme-colors: (
   primary:         #000637,
   secondary:       #bbbbf2,
-  success:         #5ed6b3,
-  info:            #1998ff,
+  //success:         #5ed6b3,
+  success:         #E27444,
+  //info:            #1998ff,
+  info:            #E27444,
   warning:         #ffad00,
-  danger:          #ff0000,
+  //danger:          #ff0000,
+  danger:          #E27444,
   light:           #fc7341,
   dark:            #221e1e,
 );
